# Paper-Whisperer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
eval/: dataset.json
scripts/: ask.py  evaluate.py  index_pdf.py  inspect_chunks.py  inspect_pdf.py  search.py
src/paperwhisperer/: __init__.py  cache.py  config.py  embeddings.py  evaluation.py  llm.py  rag.py  retriever.py  vector_store.py
src/paperwhisperer/ingestion/: __init__.py  chunker.py  loader.py
