[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperwhisperer"
version = "0.1.0"
description = "A RAG application for chatting with PDF documents."
readme = "README.md"
requires-python = ">=3.12"

# Runtime dependencies are managed in requirements.txt (pinned for
# reproducible builds and Docker-friendliness). pyproject.toml here is
# responsible only for packaging the `paperwhisperer` source tree.

[tool.setuptools.packages.find]
where = ["src"]
